creates footer, fixes position issue for footer when map is visible

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -60,16 +60,7 @@ p{
 }
 footer{
   text-align: center;
-/*  background-color: beige;*/
-  height: 90px;
-/*  padding: 10%;*/
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  /*right: 0;*/
-  width: 100%;
+  padding-top: 50px;
+  position: relative;
 }
-.footer_text{
-  position: absolute;
 
-}
